syntax = "proto3";

package order;
option go_package = "project/api/proto/orderpb";

message Order {
    string id = 1;
    string user_id = 2;
    string restaurant_id = 3;
    repeated OrderItem items = 4;
    OrderStatus status = 5;
}

message OrderItem {
    string name = 1;
    int32 quantity = 2;
}

enum OrderStatus {
    UNKNOWN = 0;
    CREATED = 1;
    READY = 2;
    COMING = 3;
    DONE = 4;
    RATED = 5;
}

message CreateOrderRequest {
    string user_id = 1;
    string restaurant_id = 2;
    repeated OrderItem items = 3;
}

message CreateOrderResponse {
    string order_id = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}